Use file URLs for jimage and jmods in system and ext class loaders